Fix clipping

--- a/components/Classes/Classes.module.scss
+++ b/components/Classes/Classes.module.scss
@@ -15,7 +15,7 @@
 
   &__singleClass {
     padding: 0 20px;
-    height: 400px;
+    height: 470px;
     line-height: 1.3rem;
     display: flex;
     flex-direction: column;
